save goods detail before pay
